--- a/chub-uat-configmap/Chart.yaml
+++ b/chub-uat-configmap/Chart.yaml
@@ -3,4 +3,4 @@ appVersion: "1.0"
 description: A Helm chart for Chubb Entsia
 name: chub-uat-configmap
 version: 0.1.0
-icon: https://edicsonm.github.io/images/Chubb.jpg
+icon: https://edicsonm.github.io/chubb-charts/images/Chubb.jpg
