--- a/chubb-st-configmap/Chart.yaml
+++ b/chubb-st-configmap/Chart.yaml
@@ -3,5 +3,4 @@ appVersion: "1.0"
 description: A Helm chart for Chubb Entsia
 name: chubb-st-configmap
 version: 0.1.0
-#icon: https://edicsonm.github.io/chubb-charts/images/Chubb.jpg
-icon: https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png
+icon: https://edicsonm.github.io/chubb-charts/images/Chubb.png
