--- a/chubb-st-configmap/templates/configmap.yaml
+++ b/chubb-st-configmap/templates/configmap.yaml
@@ -1,15 +1,15 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: st-config-map
-  labels:
-    env: st
+    name: st-config-map
+    labels:
+        env: st
 data:
-  DD_AGENT_HOST: datadog
-  DD_APM_ENABLED: "true"
-  DD_SERVICE_NAME: CHUBB_ON_DEMAND_ST
-  DD_TRACE_AGENT_PORT: "32441"
-  JAVA_OPTS: -Xms64m -Xmx2048m -XX:MetaspaceSize=96M -Djava.net.preferIPv4Stack=true -javaagent:/opt/jboss/dd-java-agent.jar
-  database-helo-ddl-username: st_cod_helo
-  database-helo-runtime-username: st_cod_helo_runtime
-  postgres-hostname: entsia-avmh-rds-01.coaeljwic7t7.ap-southeast-2.rds.amazonaws.com
+    DD_AGENT_HOST: {{.Values.datadog.dd_agent_host}}
+    DD_APM_ENABLED: {{.Values.datadog.dd_apm_enabled}}
+    DD_SERVICE_NAME: {{.Values.datadog.dd_service_name}}
+    DD_TRACE_AGENT_PORT: {{.Values.datadog.dd_trace_agent_port}}
+    JAVA_OPTS: {{.Values.java_opts}}
+    database-helo-ddl-username: {{.Values.platform.database_helo_ddl_username}}
+    database-helo-runtime-username: {{.Values.platform.database_helo_runtime_username}}
+    db-hostname: {{.Values.platform.db_hostname}}
