--- a/chubb-st-configmap/templates/configmap.yaml
+++ b/chubb-st-configmap/templates/configmap.yaml
@@ -5,7 +5,7 @@ metadata:
     labels:
         env: st
 data:
-    DD_AGENT_HOST: datadog
+    DD_AGENT_HOST: {{.Values.datadog.dd_agent_host}}
     DD_APM_ENABLED: "true"
     DD_SERVICE_NAME: CHUBB_ON_DEMAND_ST
     DD_TRACE_AGENT_PORT: "32441"
