--- a/chubb-st-configmap/templates/configmap.yaml
+++ b/chubb-st-configmap/templates/configmap.yaml
@@ -6,9 +6,9 @@ metadata:
         env: st
 data:
     DD_AGENT_HOST: {{.Values.datadog.dd_agent_host}}
-    DD_APM_ENABLED: "true"
-    DD_SERVICE_NAME: CHUBB_ON_DEMAND_ST
-    DD_TRACE_AGENT_PORT: "32441"
+    DD_APM_ENABLED: {{.Values.datadog.dd_apm_enabled}}
+    DD_SERVICE_NAME: {{.Values.datadog.dd_service_name}}
+    DD_TRACE_AGENT_PORT: {{.Values.datadog.dd_trace_agent_port}}
     JAVA_OPTS: -Xms64m -Xmx2048m -XX:MetaspaceSize=96M -Djava.net.preferIPv4Stack=true -javaagent:/opt/jboss/dd-java-agent.jar
     database-helo-ddl-username: st_cod_helo
     database-helo-runtime-username: st_cod_helo_runtime
